update/feat: watch dir by watch dog

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,4 @@
-CHANNEL_ID = ""
-TOKEN = ""
+CHANNEL_ID = "" # necessario para o envio de mensagens para o service de discord.
+TOKEN = "" # necessario para o envio de mensagens para o service de discord.
+
+LOG_PATH = "" # necessario para a tool de e2e_monioring (watch dir).
